crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__required.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"required\":[\"name\",\"age\"],\"type\":\"object\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => {
                (obj.contains_key("name")) && (obj.contains_key("age"))
            }
            _ => false,
        }
