crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__self_ref_cycle.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"$ref\":\"#\"}"
expression: is_valid_body(schema)
---
validate_ref_0(instance)
