crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__signed_zero_max_items_scientific.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-06/schema#\",\"maxItems\":-0.0,\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => (arr.len() as u64) <= 0,
            _ => false,
        }
