crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__signed_zero_min_items_decimal.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-06/schema#\",\"minItems\":-0.0,\"type\":\"array\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => true,
            _ => false,
        }
