crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__signed_zero_min_properties_scientific.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-06/schema#\",\"minProperties\":-0.0,\"type\":\"object\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => true,
            _ => false,
        }
